<resources>
    <string name="app_name">Android Contact List</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="required">(required)</string>
    <string name="contacts_added_label">Contacts added: </string>
    <string name="contacts_added_label_start">Contacts added: 0</string>
    <string name="first_name_required">First Name is required</string>
    <string name="last_name_required">Last Name is required</string>
    <string name="edit_first_name">editFirstName</string>
    <string name="edit_last_name">editLastName</string>
    <string name="edit_email">editEmail</string>
    <string name="edit_phone">editPhone</string>
    <string name="contacts_added">contactsAdded</string>
    <string name="contacts">contacts</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="email_label">Email:</string>
    <string name="phone_label">Phone:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="phone_example">999-999-9999</string>
    <string name="no_contacts">No contacts to display</string>
    <string name="first_name_string">firstName</string>
    <string name="contact_updated">Contact Updated</string>
    <string name="contact_array">contactArray</string>
</resources>
